# eik

./: .gitignore  Cargo.toml  README.md
examples/: simple_completion.rs
src/: agent.rs  clients.rs  lib.rs
