[package]
name = "eik"
version = "0.1.0"
edition = "2024"
description = "An AI agent framework for Rust"
license = "MIT"
repository = "https://github.com/mrsheerluck/eik"
keywords = ["ai", "agent", "llm", "mcp", "framework"]
categories = ["asynchronous", "development-tools"]

[dependencies]
anyhow = "1.0.103"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
dotenvy = "0.15"
